# G26-winch-pump

./: .gitignore  AGENTS.md
.claude/: settings.local.json
003 references/: references.md
005 report/: Prosjektrapport.md  Prosjektrapport.tex  rapport.md  rapport_mal.md
006 analysis/: .gitignore  README.md  pyproject.toml  run_weekly.py
006 analysis/3.1 datainnhenting/: README.md  _transcribe_2026-05-14.py  _transcribe_2026-05-21.py  gen_baseline_csv.py  tab_kolonner.md  verify_asset_type_sums.py  verify_tier1_sums.py
006 analysis/3.2 eda/: README.md  eda_findings.md  eda_main.py  tab_strukturelle_gaps.md  tab_topp10_verste_assets.md  tab_zero_gap_assets.md
006 analysis/3.3 gap-deteksjon/: README.md  figures.py  gap_detection.py  tab_kritiske_endringer.md  tab_positive_endringer.md
006 analysis/3.4 varsling/: README.md  active_alerts.json  gap_alerting.py  recipients.yaml  send_digests.py
006 analysis/3.4 varsling/digests/: digest_2026-05-14_hpus-koordinator.txt  digest_2026-05-14_rds-koordinator.txt  digest_2026-05-14_spoolers-koordinator.txt  digest_2026-05-21_cable-koordinator.txt  digest_2026-05-21_hpus-koordinator.txt  digest_2026-05-21_rds-koordinator.txt  digest_2026-05-21_spoolers-koordinator.txt  digest_2026-05-21_tensioner-koordinator.txt
006 analysis/3.5 validering/: README.md  conftest.py  test_evaluate_alert.py  test_thread_lifecycle.py
011 fase 1 - proposal/: proposal.md
012 fase 2 - plan/: avviksanalyse-2026-04-30.md  avviksanalyse-2026-05-01.md  core.json  datakvalitet_asset_custodian.md  kortetiltak.md  milestones.json  risk.json  (+5 more)
(+20 files in other folders)
