[project]
name = "g26-analysis"
version = "0.1.0"
description = "Analysearbeid for G26 WinchPump – EDA, gap-deteksjon, varslingslogikk og validering."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
]
